--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,6 @@
-.{
+*{
     margin:0;
     font-family: 'Work Sans', sans-serif;
-    
 }
 header{
 
@@ -113,8 +112,8 @@ main{
 }
 
 .plan-title{
-    font-weight: 750;
-    font-size: 35px;
+    font-weight: 7050;
+    font-size: 30px;
     margin-top: 24px;
     margin-bottom: 0;
     
@@ -211,6 +210,7 @@ main{
     font-size: 18px;
     color: #F3F3F3;
     padding-left: 21px;
+    border: 1px solid white;
 }
 
 .subscribe-btn{
